--- a/AvalonStudio/AvalonStudio.Toolchains.LocalGCC/AvalonStudio.Toolchains.LocalGCC.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.LocalGCC/AvalonStudio.Toolchains.LocalGCC.csproj
@@ -35,10 +35,6 @@
       <HintPath>..\packages\Perspex.9999.0.1451-nightly\lib\portable-windows8+net45\Perspex.Animation.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Perspex.Application, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Perspex.9999.0.1315-nightly\lib\portable-windows8+net45\Perspex.Application.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Perspex.Base, Version=0.0.0.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Perspex.9999.0.1451-nightly\lib\portable-windows8+net45\Perspex.Base.dll</HintPath>
       <Private>True</Private>
@@ -154,15 +150,28 @@
     <Compile Include="LocalGCCToolchain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GCCToolchainSettings.cs" />
+    <Compile Include="ConsoleAppProjectTemplate.cs" />
     <Compile Include="ToolchainSettingsForm.xaml.cs">
       <DependentUpon>ToolchainSettingsForm.xaml</DependentUpon>
     </Compile>
     <Compile Include="ToolchainSettingsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AvalonStudio.Debugging.GDB.Local\AvalonStudio.Debugging.GDB.Local.csproj">
+      <Project>{0ead4429-5b5a-4ebb-87b6-ea91ce86b09e}</Project>
+      <Name>AvalonStudio.Debugging.GDB.Local</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
       <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
       <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Languages.CPlusPlus\AvalonStudio.Languages.CPlusPlus.csproj">
+      <Project>{5d5fe113-ffef-4e49-a011-00a167efa36e}</Project>
+      <Name>AvalonStudio.Languages.CPlusPlus</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Projects.CPlusPlus\AvalonStudio.Projects.CPlusPlus.csproj">
+      <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
+      <Name>AvalonStudio.Projects.CPlusPlus</Name>
     </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects.Standard\AvalonStudio.Projects.Standard.csproj">
       <Project>{4726219f-2e8e-4f65-a5ad-3167e3dbf56c}</Project>
